Mastering XAML Layouts

--- a/WiredBrainCoffee.CustomersApp/MainPage.xaml
+++ b/WiredBrainCoffee.CustomersApp/MainPage.xaml
@@ -6,9 +6,63 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    d:DesignWidth="600" d:DesignHeight="400">
 
-    <Grid>
+    <Grid x:Name="MainGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition x:Name="ColumnDefinitionOne" Width="Auto" />
+            <ColumnDefinition x:Name="ColumnDefinitionTwo" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
 
+        <!-- Header -->
+        <StackPanel Background="#F05A28" Orientation="Horizontal" Grid.ColumnSpan="3">
+            <Image Source="Images/logo.png" Height="90" Margin="5" />
+            <TextBlock Text="Coffee Customers" FontSize="30" FontWeight="ExtraBold" Foreground="White"
+                       VerticalAlignment="Bottom" Margin="20" />
+            <TextBlock Text="Version 1.0" Foreground="#333333" VerticalAlignment="Bottom" Margin="0 0 0 25" />
+        </StackPanel>
+
+        <!-- Customer list -->
+        <Grid x:Name="CustomerListGrid" Grid.Row="1" Grid.Column="0" Background="#EEEEEE">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal">
+                <Button Margin="10" Click="ButtonMoveCustomer_Click">
+                    <SymbolIcon x:Name="MoveSymbolIcon" Symbol="Forward" />
+                </Button>
+                <Button Margin="10" Click="ButtonAddCustomer_Click">
+                    <StackPanel Orientation="Horizontal">
+                        <SymbolIcon Symbol="AddFriend" />
+                        <TextBlock Text="Add" Margin="5 0 0 0" />
+                    </StackPanel>
+                </Button>
+                <Button Margin="10" Click="ButtonDeleteCustomer_Click">
+                    <StackPanel Orientation="Horizontal">
+                        <SymbolIcon Symbol="Delete" />
+                        <TextBlock Text="Delete" Margin="5 0 0 0" />
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+
+            <ListView Grid.Row="1">
+                <ListViewItem>Thomas</ListViewItem>
+                <ListViewItem>Julia</ListViewItem>
+                <ListViewItem>Anna</ListViewItem>
+            </ListView>
+        </Grid>
+
+        <StackPanel x:Name="FriendStackPanel" Grid.Row="1" Grid.Column="1">
+            <TextBox Header="FirstName" Margin="10" />
+            <TextBox Header="LastName" Margin="10" />
+            <CheckBox Content="Is Developer" Margin="10" />
+        </StackPanel>
     </Grid>
 </Page>
