--- a/WiredBrainCoffee.CustomersApp/MainPage.xaml
+++ b/WiredBrainCoffee.CustomersApp/MainPage.xaml
@@ -43,13 +43,14 @@
                 <Button Margin="10" Click="ButtonMoveCustomer_Click">
                     <SymbolIcon x:Name="MoveSymbolIcon" Symbol="Forward" />
                 </Button>
-                <Button Margin="10" Click="ButtonAddCustomer_Click">
+                <Button Margin="10" Click="{x:Bind ViewModel.AddCustomer}">
                     <StackPanel Orientation="Horizontal">
                         <SymbolIcon Symbol="AddFriend" />
                         <TextBlock Text="Add" Margin="5 0 0 0" />
                     </StackPanel>
                 </Button>
-                <Button Margin="10" Click="ButtonDeleteCustomer_Click">
+                <Button Margin="10" Click="{x:Bind ViewModel.DeleteCustomer}"
+                        IsEnabled="{x:Bind ViewModel.IsCustomerSelected,Mode=OneWay}">
                     <StackPanel Orientation="Horizontal">
                         <SymbolIcon Symbol="Delete" />
                         <TextBlock Text="Delete" Margin="5 0 0 0" />
@@ -57,10 +58,24 @@
                 </Button>
             </StackPanel>
 
-            <ListView x:Name="CustomerListView" Grid.Row="1" DisplayMemberPath="FirstName"
-                      SelectionChanged="CustomerListView_OnSelectionChanged" />
+            <ListView Grid.Row="1"
+                      ItemsSource="{x:Bind ViewModel.Customers,Mode=OneWay}"
+                      SelectedItem="{x:Bind ViewModel.SelectedCustomer,Mode=TwoWay}">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="model:Customer">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{x:Bind FirstName,Mode=OneWay}" FontWeight="Bold" />
+                            <TextBlock Text="{x:Bind LastName,Mode=OneWay}" Margin="5 0 0 0" />
+                            <TextBlock Text="(Developer)" Margin="5 0 0 0" Opacity="0.5"
+                                       Visibility="{x:Bind IsDeveloper,Mode=OneWay}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </Grid>
 
-        <controls:CustomerDetailControl x:Name="CustomerDetailControl" Grid.Row="1" Grid.Column="1" />
+        <controls:CustomerDetailControl Grid.Row="1" Grid.Column="1"
+                                        Customer="{x:Bind ViewModel.SelectedCustomer,Mode=OneWay}"
+                                        Visibility="{x:Bind ViewModel.IsCustomerSelected,Mode=OneWay}" />
     </Grid>
 </Page>
